Default to aot-jar when AOT is enabled